adds order Feature test
adds unit feature trests
